src/objects/Section_Template__c.object
<CustomObject>
    <description>Used to group questions and support the logical separation of groups of questions within Assessment Templates.</description>
    <fields>
        <fullName>No_of_Questions_Section__c</fullName>
        <inlineHelpText>No of Questions Per Section, This is rollup summary field , data comes from question table field count questions</inlineHelpText>
        <label>No of Questions Per Section</label>
        <summaryForeignKey>Question_Template__c.Section_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_response_per_section_per_user__c</fullName>
        <description>Number of responses per section per user</description>
        <inlineHelpText>Number of responses per section per user</inlineHelpText>
        <label>No of response per section per user</label>
        <summaryForeignKey>Question_Template__c.Section_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <description>This is to order the sections from lowest to greatest no</description>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Section__c</fullName>
        <inlineHelpText>Master Detail Relationship - Main Questionaire is master and section is detail.</inlineHelpText>
        <label>Master Questionnaire to Detail Section</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipName>Section_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Random_Display_Count__c</fullName>
        <label>Random Display Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Description__c</fullName>
        <inlineHelpText>This is a secure, web-based survey conducted by the Virginia Center for School Safety. Submission of this survey partially fulfills the Virginia School Safety Audit requirement.</inlineHelpText>
        <label>Section Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Section_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Section External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>0 to 100%</inlineHelpText>
        <label>Section Weight (%)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_label__c</fullName>
        <description>Put label  in section1:section1.1 form</description>
        <inlineHelpText>Put label  in section1:section1.1 form</inlineHelpText>
        <label>Section Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subsectionlabel__c</fullName>
        <description>This is subsection label</description>
        <inlineHelpText>This is subsection label NOt USING</inlineHelpText>
        <label>Subsectionlabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuperSection__c</fullName>
        <description>This is the parent section</description>
        <inlineHelpText>This is the parent section name which is represented by parentsection:subsection in section name NOT USING</inlineHelpText>
        <label>SuperSection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isArchive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isArchive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <inlineHelpText>This is to set whether the section is complete or not. We can set in the apex code when the user answers all the questions of a section.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Section Template</label>
    <nameField>
        <displayFormat>Sec-{0}</displayFormat>
        <label>Section_Template id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>